# injection_molding_study_sikdd2026

./: .gitignore  README.md  pyproject.toml
data/interim/: labeled_data_preprocessed.csv
llm_as_judge_signed_shap/: aggregate_score_summary.csv  all_llm_as_judge_results.json  explanation_level_scores.csv  first_place_counts.csv  llm_as_judge_row_2163.json  llm_as_judge_row_2163.md  llm_as_judge_row_2177.json  llm_as_judge_row_2177.md  llm_as_judge_row_4726.json  llm_as_judge_row_4726.md  llm_as_judge_row_5183.json  llm_as_judge_row_5183.md  llm_as_judge_row_5185.json  llm_as_judge_row_5185.md  llm_as_judge_row_5188.json  llm_as_judge_row_5188.md  llm_as_judge_row_5190.json  llm_as_judge_row_5190.md  llm_as_judge_row_5192.json  llm_as_judge_row_5192.md  llm_as_judge_row_5205.json  llm_as_judge_row_5205.md  llm_as_judge_row_5207.json  llm_as_judge_row_5207.md
llm_as_judge_signed_shap/without_time_aware/: aggregate_score_summary.csv  all_llm_as_judge_results.json  explanation_level_scores.csv  first_place_counts.csv  llm_as_judge_row_115.json  llm_as_judge_row_115.md  llm_as_judge_row_116.json  llm_as_judge_row_116.md  llm_as_judge_row_1347.json  llm_as_judge_row_1347.md  (+14 more)
llm_explanation/: explanation_results_sikdd.md
model_tuning_results/: best_hyperparameters.json  catboost_optuna_trials.csv  lightgbm_optuna_trials.csv  tuned_model_test_results.csv  xgboost_optuna_trials.csv
notebooks/: 01_data_preprocessing.ipynb  02_ml_xai.ipynb  02_ml_xai_new.ipynb  02_ml_xai_new_without_time_aware_splitting.ipynb  03_llm_as_judge_new.ipynb  kamp_test_predictions_for_xai.csv
(+19 files in other folders)
